<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

        <item android:id="@+id/action_search"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/action_search"
            android:titleCondensed="@string/action_search"
            android:orderInCategory="1"
            android:showAsAction="ifRoom|collapseActionView"
            android:actionViewClass="android.widget.SearchView" />

        <item android:id="@+id/action_camera"
            android:title="@string/action_camera"
            android:icon="@drawable/ic_photo_camera_white_24dp"
            android:showAsAction="ifRoom"
            android:orderInCategory="2"/>

        <item android:id="@+id/action_email"
            android:title="@string/action_email"
            android:icon="@drawable/ic_email_white_24dp"
            android:showAsAction="ifRoom"
            android:orderInCategory="3"/>

        <item android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:titleCondensed="@string/action_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:orderInCategory="100"
            android:showAsAction="ifRoom" />

        <item android:id="@+id/action_edit"
            android:title="@string/action_edit"
            android:titleCondensed="Edit"
            android:icon="@drawable/ic_mode_edit_white_24dp"
            android:showAsAction="ifRoom"/>

    </menu>
